# viohar-prediction

./: CMakeLists.txt  README.md  package.xml
launch/: web_interface.launch
scripts/: pipeline_launcher.py  static_server.py
srv/: StartPipeline.srv
web/: app.js  index.html  odom_plot.js
